# kraken_exchange_data_downloader

./: Cargo.toml  Project Documentation.odt  Project documentation.odt  README.md
src/: kraken_message_handler.rs  kraken_wsclient.rs  main.rs  message_types.rs  store_kraken_to_db.rs  store_kraken_to_text.rs
